fixing up grid, buttons made more consistent, alignment issues fixed

--- a/src/styles/scss/figures.scss
+++ b/src/styles/scss/figures.scss
@@ -1,4 +1,6 @@
 .figure-wrapper {
+  display: flex;
+  flex-wrap: wrap;
   margin: 0 -6px;
 }
 
