--- a/src/styles/scss/runnabear.scss
+++ b/src/styles/scss/runnabear.scss
@@ -1,3 +1,4 @@
 .figure-bears {
+  display: flex;
   min-width: 190px;
 }
